gl33-master/src/test/deca/syntax/valid/others/testInclude.deca
/*
Test sur les include

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/valid/others/expected
*/

#include "testIf.deca"